<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@color/todo_background_todo_app">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/add_task"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBussiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_category_bussiness"
            android:checked="true"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_business_category"/>

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_category_personal"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_personal_category"/>

        <RadioButton
            android:id="@+id/rbOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_category_other"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_other_category"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_task"
        android:backgroundTint="@color/todo_accent"
        />



</LinearLayout>